--- a/resume/templates/lumia/index.html
+++ b/resume/templates/lumia/index.html
@@ -54,7 +54,7 @@
       <p class =  "col-4" style ='padding-top: 15px'> Email: {{p.Email}} </p>
 
       <div class="header-social-links">
-        <a href=" {{p.LinkedIn}} " class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://{{p.LinkedIn}} " class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
       {% endfor %}
 
@@ -168,7 +168,7 @@
           {% for p in proj %}
           <div class="testimonial-item">
             <h3>{{p.Title}}</h3>
-            <p style = "word-break: break-all;">
+            <p style = "white-space: normal;">
               {{p.Infromation}}
             </p>
           </div>
