--- a/resume/templates/office/index.html
+++ b/resume/templates/office/index.html
@@ -85,7 +85,7 @@
               <p><em> {{e.School}} </em></p>
               <h5> Coursework </h5>
               <div class="container">
-                <p style = "word-break: break-all;">{{e.Coursework}}</p>
+                <p style = "white-space: normal;">{{e.Coursework}}</p>
               </div>
             </div>
             {% endfor %}
@@ -98,7 +98,7 @@
               <p><em> {{e.Organization}} </em></p>
               <h5> {{e.Startdate}} </h5>
               <h5> {{e.Enddate}} </h5>
-              <p style = "word-break: break-all;"> {{e.Information}} </p>
+              <p style = "white-space: normal;"> {{e.Information}} </p>
             </div>
             {% endfor %}
           </div>
@@ -119,7 +119,7 @@
             <div class="resume-item">
               <h4> {{e.Title}} </h4>
               <div class="container">
-                <p style = "word-break: break-all;">{{e.Infromation}}</p>
+                <p style = "white-space: normal;">{{e.Infromation}}</p>
               </div>
             </div>
             {% endfor %}
@@ -132,7 +132,7 @@
               <p><em> {{e.Organization}} </em></p>
               <h5> {{e.Startdate}} </h5>
               <h5> {{e.Enddate}} </h5>
-              <p style = "word-break: break-all;"> {{e.Information}} </p>
+              <p style = "white-space: normal;"> {{e.Information}} </p>
             </div>
             {% endfor %}
           </div>
