--- a/resume/templates/resume/register.html
+++ b/resume/templates/resume/register.html
@@ -97,7 +97,27 @@
           border-radius: 150px; 
           background-color:  #ef6603; 
           padding: 20px 10px;
-          color: white;" role="button" href=" {% static 's1\img\Lumia_img.pdf' %} " target="_blank" onclick="return hs.expand(this)">Lumia</a>
+          color: white;" role="button" href=" {% static 's1\img\lumiatemplate.pdf' %} " target="_blank" onclick="return hs.expand(this)">Lumia</a>
+          <a id="autoload" style="margin: 10px auto;  
+          border-radius: 150px; 
+          background-color:  #ef6603; 
+          padding: 20px 10px;
+          color: white;" role="button" href=" {% static 's1\img\officetemplate.pdf' %} " target="_blank" onclick="return hs.expand(this)">Office</a>
+          <a id="autoload" style="margin: 10px auto;  
+          border-radius: 150px; 
+          background-color:  #ef6603; 
+          padding: 20px 10px;
+          color: white;" role="button" href=" {% static 's1\img\iportfoliotemplate.pdf' %} " target="_blank" onclick="return hs.expand(this)">IPortf</a>
+          <a id="autoload" style="margin: 10px auto;  
+          border-radius: 150px; 
+          background-color:  #ef6603; 
+          padding: 20px 10px;
+          color: white;" role="button" href=" {% static 's1\img\dewitemplate.pdf' %} " target="_blank" onclick="return hs.expand(this)">&nbsp;Dewi&nbsp;</a>
+          <a id="autoload" style="margin: 10px auto;  
+          border-radius: 150px; 
+          background-color:  #ef6603; 
+          padding: 20px 10px;
+          color: white;" role="button" href=" {% static 's1\img\personaltemplate.pdf' %} " target="_blank" onclick="return hs.expand(this)">Persn</a>
         </div>
         
         <hr>
