--- a/resume/templates/dewi/index.html
+++ b/resume/templates/dewi/index.html
@@ -41,7 +41,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     {% for p in person %}
-    <div style="background-image: url( {{p.balanced_image.url}} );" class="hero-container" data-aos="fade-up" data-aos-delay="150">
+    <div style="background-image: url( {{p.balanced_image.url}} ) no-repeat; background-size: 100%;" class="hero-container" data-aos="fade-up" data-aos-delay="150">
       
       <h1>{{p.Name}}</h1>
       
@@ -62,14 +62,14 @@
         </div>
         <div class="row">
           {% for p in person %}
-          <div class="col-lg-6  align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4  align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
             <img src=" {{p.profile_image.url}} " class="img-fluid" alt="">
           </div>
 
-          <div class="col-lg-6 pt-3 pt-lg-0 content">
+          <div class="col-lg-8 pt-3 pt-lg-0 content">
             
             <h5> Summary</h5>
-            <p style = "word-break: break-all;">{{p.Profile}}</p>
+            <p style = "white-space: normal;">{{p.Profile}}</p>
             {% endfor %}
           </div>
 
@@ -114,7 +114,7 @@
         <div class="tab-content">
           <div class="tab-pane active show" id="tab-1">
             <div class="row">
-              <div class="col-lg-4 order-2 order-lg-1 mt-3 mt-lg-0">
+              <div class="col-lg-12 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3> {{e.Organization}} </h3>
                 <ul>
                   <li><i class="ri-check-double-line"></i> Start date: {{e.Startdate}} </li>
@@ -149,8 +149,8 @@
                 <li> Start date: {{i.Startdate}} </li>
                 <li> End date: {{i.Enddate}} </li>
                 <li> Role: {{i.Role}} </li>
+                <li> Information: <br> {{i.Information}}</li>
               </ul>
-              <p style = "word-break: break-all;"> {{i.Information}} </p>
             </div>
           </div>
         </div>
@@ -172,7 +172,7 @@
           {% for p in proj %}
           <div class="testimonial-item">
             <h3> {{p.Title}} </h3>
-            <p style = "word-break: break-all;"></p>>
+            <p style = "white-space: normal;"></p>
               {{p.Infromation}}
             </p>
           </div>
