--- a/resume/templates/base.html
+++ b/resume/templates/base.html
@@ -127,7 +127,7 @@
 
 
     $('.inv').formset({
-     prefix: 'involvment',
+     prefix: 'involve',
      addText: 'Add Involvement',
      deleteText: 'Remove Involvement'
     });
