--- a/resume/templates/iportfolio/index.html
+++ b/resume/templates/iportfolio/index.html
@@ -49,7 +49,7 @@
         <img src="{{p.profile_image.url}}" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html"> {{p.Name}} </a></h1>
         <div class="social-links mt-3 text-center">
-          <a href=" {{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href=" https://{{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
       {% endfor %}
