--- a/resume/templates/office/index.html
+++ b/resume/templates/office/index.html
@@ -47,7 +47,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1> {{p.Name}} </h1>
       <div class="social-links">
-        <a href=" {{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href=" https://{{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -206,7 +206,7 @@
     <div class="container">
       <h3> {{p.Name}} </h3>
            <div class="social-links">
-        <a href=" {{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href=" https://{{p.LinkedIn}} " class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
