--- a/resume/templates/personal/index.html
+++ b/resume/templates/personal/index.html
@@ -60,7 +60,7 @@
       </nav><!-- .nav-menu -->
       {% for p in person %}
       <div class="social-links">
-        <a href="{{ p.LinkedIn }}" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://{{ p.LinkedIn }}" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
       {% endfor %}
 
@@ -218,7 +218,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href=" {{p.LinkedIn}} " class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href=" https://{{p.LinkedIn}} " class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
         </div>
