--- a/resume/templates/office/index.html
+++ b/resume/templates/office/index.html
@@ -6,7 +6,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  {% for p in person %}
+  <title> {{p.Name}} Resume Site </title>
+  {% endfor %}
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
