--- a/resume/templates/personal/index.html
+++ b/resume/templates/personal/index.html
@@ -6,7 +6,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  {% for p in person %}
+  <title> {{p.Name}} Resume Site </title>
+  {% endfor %}
+
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
