--- a/resume/templates/dewi/index.html
+++ b/resume/templates/dewi/index.html
@@ -199,7 +199,7 @@
           <div class="col-lg-12 col-md-12">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-info">
-                <p> {{s.Information}} </p>
+                <p style = "white-space: normal;"> {{s.Information}} </p>
               </div>
             </div>
           </div>
