--- a/resume/templates/lumia/index.html
+++ b/resume/templates/lumia/index.html
@@ -191,7 +191,7 @@
               <img src=" {{ p.profile_image.url}} " alt="" width="200" height="200">
               {% endfor %}
               {% for s in skill %}
-              <p>
+              <p style = "white-space: normal;">
                 Skills: <br>
                 {{s.Information}}
               </p>
