--- a/resume/templates/office/index.html
+++ b/resume/templates/office/index.html
@@ -159,7 +159,7 @@
             {% for p in person  %}
             <img src="{{ p.profile_image.url}}" class="testimonial-img" alt="">
             {% endfor %}
-            <p>{{s.Information}}</p>
+            <p style = "white-space: normal;">{{s.Information}}</p>
           </div>
         </div>
         {% endfor %}
