--- a/resume/templates/personal/index.html
+++ b/resume/templates/personal/index.html
@@ -189,7 +189,7 @@
       <div class="col-md-12 d-flex align-items-stretch">
         {% for s in skill %}
         <div class="info-box">
-          <p> {{s.Information}} </p>
+          <p style = "white-space: normal;"> {{s.Information}} </p>
         </div>
         {% endfor %}
       </div>
