--- a/resume/templates/resume/login.html
+++ b/resume/templates/resume/login.html
@@ -8,7 +8,7 @@
 {% endblock title %}
 {% block main %}
 
-<div class = "container" style = "padding: 20px 20px 20px 20px; border-radius: 25px; margin: 150px 150px 150px 200px;">
+<div class = "container col-12" style = "padding: 20px 20px 20px 20px; border-radius: 25px; margin: 100px 0px;">
     <hr>
     <div class="section-title" data-aos="zoom-out">
         <h2>login</h2>
