--- a/resume/templates/resume/link.html
+++ b/resume/templates/resume/link.html
@@ -4,20 +4,20 @@
 
 
 {% block title %}
-  Page Link
+Page Link
 {% endblock title %}
 {% block main %}
 
-<div class = "container" style = "padding: 20px 20px 20px 20px; border-radius: 25px; margin: 150px 150px 150px 200px;">
-    <hr>
-    <div class="section-title" data-aos="zoom-out">
-        <h2>page link</h2>
-        <p>YOUR WEBSITE</p>
-      </div>
-    <main role="main" class="inner cover">
-        <h1>{{link}}</h1>
-    </main>
-    <hr>
+<div class="container" style="padding: 100px 0px;">
+  <hr>
+  <div class="section-title" data-aos="zoom-out">
+    <h2>page link</h2>
+    <p>YOUR WEBSITE</p>
+  </div>
+  <main role="main" class="inner cover">
+    <h1 style="word-break: break-all;">{{link}}</h1>
+  </main>
+  <hr>
 </div>
 
 {% endblock main %}
