--- a/resume/templates/iportfolio/index.html
+++ b/resume/templates/iportfolio/index.html
@@ -16,7 +16,9 @@
   <link href="{% static 's6/img/favicon-32x32.png' %}" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 's6/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -45,7 +47,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-      
+
       {% for p in person %}
       <div class="profile">
         <img src="{{p.profile_image.url}}" alt="" class="img-fluid rounded-circle">
@@ -55,7 +57,7 @@
         </div>
       </div>
       {% endfor %}
-      
+
 
       <nav class="nav-menu">
         <ul>
@@ -74,13 +76,14 @@
 
   <!-- ======= Hero Section ======= -->
   {% for p in person %}
-  <section style ="background: url( {{p.balanced_image.url}} ) no-repeat; background-size: 100%;" id="hero" class="d-flex flex-column justify-content-center align-items-center">
-  {% endfor %}
+  <section style="background: url( {{p.balanced_image.url}} ) no-repeat; background-size: cover;" id="hero"
+    class="d-flex flex-column justify-content-center align-items-center">
+    {% endfor %}
 
     {% for p in person %}
-    <div id = "lol" class="hero-container" data-aos="fade-in">
+    <div id="lol" class="hero-container" data-aos="fade-in">
       <h1> {{p.Name}} </h1>
-    </div>  
+    </div>
     {% endfor %}
   </section><!-- End Hero -->
 
@@ -99,7 +102,7 @@
             {% for p in person %}
             <div class="row">
               <div class="col-lg-6">
-                <p style = "white-space: normal;"> {{p.Profile}} </p>
+                <p style="white-space: normal;"> {{p.Profile}} </p>
               </div>
             </div>
             {% endfor %}
@@ -126,17 +129,17 @@
               <h4> {{e.School}} </h4>
               <h5> {{e.Major}} </h5>
               <h5>{{e.Minor}}</h5>
-              <p style = " white-space: normal;"> Important Coursework: {{e.Coursework}} </p>
+              <p style=" white-space: normal;"> Important Coursework: {{e.Coursework}} </p>
             </div>
             {% endfor %}
-            
+
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Projects</h3>
             {% for p in proj %}
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
-              <p style = "white-space: normal;"> {{p.Infromation}} </p>
+              <p style="white-space: normal;"> {{p.Infromation}} </p>
             </div>
             {% endfor %}
           </div>
@@ -158,7 +161,7 @@
               <h5> {{e.Startdate}} </h5>
               <h5> {{e.Enddate}} </h5>
               <p><em> {{e.Role}} </em></p>
-              <p style = "white-space: normal;"> {{e.Information}} </p>
+              <p style="white-space: normal;"> {{e.Information}} </p>
             </div>
             {% endfor %}
           </div>
@@ -170,7 +173,7 @@
               <h5> {{e.Startdate}} </h5>
               <h5> {{e.Enddate}} </h5>
               <p><em> {{e.Role}} </em></p>
-              <p style = "white-space: normal;"> {{e.Information}} </p>
+              <p style="white-space: normal;"> {{e.Information}} </p>
             </div>
             {% endfor %}
           </div>
@@ -180,16 +183,16 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg" >
+    <section id="skills" class="skills section-bg">
       <div class="container">
 
         {% for s in skill %}
         <div class="section-title">
           <h2>Skills</h2>
-          <p  style = "white-space: normal;"> {{s.Information}} </p>
+          <p style="white-space: normal;"> {{s.Information}} </p>
         </div>
         {% endfor %}
-    
+
       </div>
     </section><!-- End Skills Section -->
 
